WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311386
AX: ASSERTION FAILED: threadLikeAssertion.isCurrent() in ParentFrameSearchContext
https://bugs.webkit.org/show_bug.cgi?id=311386
Summary
AX: ASSERTION FAILED: threadLikeAssertion.isCurrent() in ParentFrameSearchCon...
Dominic Mazzoni
Reported
2026-04-02 19:07:13 PDT
ASSERTION FAILED: threadLikeAssertion.isCurrent() /Volumes/Code/safari/OpenSource/WebKitBuild/Debug/usr/local/include/wtf/ThreadAssertions.h(163) : void WTF::assertIsCurrent(const ThreadLikeAssertion &) 1 WTF::assertIsCurrent(WTF::ThreadLikeAssertion const&) 2 WTF::RefCountDebuggerImpl<(WTF::RefCountIsThreadSafe)0>::applyRefDerefThreadingCheck(unsigned int) const 3 WTF::RefCountDebuggerImpl<(WTF::RefCountIsThreadSafe)0>::willDeref(unsigned int) const 4 WTF::RefCountedBase::derefBase() const 5 WTF::RefCounted<WebCore::ParentFrameSearchContext>::deref() const 6 WTF::DefaultRefDerefTraits<WebCore::ParentFrameSearchContext>::derefIfNotNull(WebCore::ParentFrameSearchContext*) 7 WTF::Ref<WebCore::ParentFrameSearchContext, WTF::RawPtrTraits<WebCore::ParentFrameSearchContext>, WTF::DefaultRefDerefTraits<WebCore::ParentFrameSearchContext>>::~Ref() 8 WTF::Ref<WebCore::ParentFrameSearchContext, WTF::RawPtrTraits<WebCore::ParentFrameSearchContext>, WTF::DefaultRefDerefTraits<WebCore::ParentFrameSearchContext>>::~Ref()
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-04-02 19:07:19 PDT
<
rdar://problem/173982202
>
Dominic Mazzoni
Comment 2
2026-04-02 19:10:04 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61947
EWS
Comment 3
2026-04-03 09:34:38 PDT
Committed
310519@main
(fa6649b0bc79): <
https://commits.webkit.org/310519@main
> Reviewed commits have been landed. Closing PR #61947 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug