AX: ASSERTION FAILED: threadLikeAssertion.isCurrent() in ParentFrameSearchContext https://bugs.webkit.org/show_bug.cgi?id=311386 rdar://173982202

Reviewed by Tyler Wilcock.

ParentFrameSearchContext should be ThreadSafeRefCounted, it already has locking.

* Source/WebCore/accessibility/AXCrossProcessSearch.cpp:

Canonical link: https://commits.webkit.org/310519@main